2008-01-28  Jason Xia  <jasonxh@gmail.com>

	* src/core/proxy.c, src/core/proxy.h: New files.
	A simple proxy client implementation. Currently support SOCKSv4 and
	SOCKSv5 proxy.

	* configure.ac, src/core/Makefile.am: Configure option and build
	instructions for proxy.

	* src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::LoadFavorites),
	src/core/site.cpp (CSite::CSite) (CSite::SaveToFile), src/core/site.h:
	Load and save config items for site proxy.

	* src/view/telnetcon.cpp (CTelnetCon::ConnectAsync): Handle site proxy
	preferences. External connections (SSH or Telnet) are not influenced
	by proxy preferences.

2008-01-26  Jason Xia  <jasonxh@gmail.com>

	* src/view/telnetcon.cpp (CTelnetCon::Connect): Add support for auto
	login in case only password is needed. (e.g. SSH)

2008-01-09  Emfox Zhou  <emfox@debian.org>

	* src/sitepage.cpp, src/configfile.cpp, src/nancy_bot/msgdata.cpp:
	directly include essential C++ headers (http://bugs.debian.org/420917)

2008-01-09  Emfox Zhou  <emfox@debian.org>

	* plugin/data/pcmanx.html: convert to unix format other than dos.

2008-01-03  Jim Huang  <jserv@openmoko.org>

	* AUTHORS: Mentioned the contributors of all refered codes.

2008-01-03  Jim Huang  <jserv@openmoko.org>

	* src/docklet/eggtrayicon.c: Disabled if gtk+ version >= 2.10.
	EggTrayIcon is deprecated. Use GtkStatusIcon instead.

	* src/mainframe.h (CMainFrame::ShowTrayIcon)
	(CMainFrame::HideTrayIcon) (CMainFrame::m_TrayIcon): Use
	GtkStatusIcon implementation.
	(CMainFrame::set_tray_icon) (CMainFrame::m_TrayButton)
	(CMainFrame::m_TrayIcon): Commented out if gtk+ version >= 2.10.

	* src/mainframe.cpp (CMainFrame::CMainFrame): Reimplement using
	GtkStatusIcon.
	(CMainFrame::OnDestroy) (CMainFrame::set_tray_icon): Likewise.

2008-01-03  Shih-Yuan Lee  <fourdollars@gmail.com>

	* AUTHORS,
	configure.ac: Fix the compiling error on Gentoo Linux.
	Patched by Chen Yung Chou <scsichen@gmail.com>.

2008-01-02  Shih-Yuan Lee  <fourdollars@gmail.com>
